added toBytes to the ValueConverter